--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,11 +61,13 @@ flutter:
   assets:
     - assets/
     - assets/fonts/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
 
     - assets/images/logo.png
     - assets/images/logo+name.png
+    - assets/images/texture.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
