Membuat halaman detail peminjaman Navigasi ke halaman detail Memecah beberapa file yg panjang Merapikan beberapa file

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="warga_kita_app"
+        android:label="Warga Kita App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
