--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/local.properties
+/android/.gradle
+/android/key.properties
+
+/macos/Flutter/Generated.xcconfig
+/macos/Flutter/flutter_export_environment.sh
