--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^6.0.2
   intl: ^0.20.2
   url_launcher: ^6.3.2
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
